--- a/client/public/assets/locales/vi/translation.json
+++ b/client/public/assets/locales/vi/translation.json
@@ -6,6 +6,7 @@
   "blogs": "Blogs",
   "save": "Lưu",
   "delete": "Xóa",
+  "view": "Xem",
   "modal": {
     "warnTitle": "Lưu ý!",
     "unSaved": "Bạn có chắc chắn muốn hủy các thay đổi không?",
